# itplacecplusplus

task1/: 12.hh  CMakeLists.txt  Cat.hh  Chicken.hh  Dog.hh  Egg.hh  Pet.hh  Worker.cc  Worker.hh  Zoo.hh  act.cc  act.hh  one.cc  start.hh  stop.hh  strings.hh  task1.cc  two.cc
task3/: CMakeLists.txt  String.cpp  String.hpp  main.cpp
